# GestaltQuestions

./: .firebaserc  .gitignore  Makefile  README.md  compose.dev.yaml  compose.yaml  firebase.json
agents/: langgraph.json  (+1 more)
backend/: .env.dev  Dockerfile  Dockerfile.dev  package-lock.json  package.json  pyproject.toml
backend/app_test/: __init__.py  conftest.py  temp.py
backend/app_test/data/: conftest.py  test_institution.py  test_question_attempt.py  test_question_db.py  test_role.py  test_user.py
backend/app_test/factories/: __init__.py
backend/app_test/fixtures/: fixture_crud.py  fixture_question_running_service.py  fixture_question_storage.py
backend/app_test/integration/: conftest.py
backend/app_test/integration/question_manager/: conftest.py  test_question_manager.py
backend/app_test/integration/service/: test_storage.py
backend/app_test/integration/storage/: test_storage.py
backend/app_test/integration/web/: conftest.py  test_crud.py
backend/app_test/mock_data/: question_submission.py  questions.py  users.py
backend/app_test/service/: conftest.py  test_question_manager.py  test_storage.py
backend/app_test/shared/factories/: __init__.py  question_attempt_factory.py  question_factory.py  question_manager_factory.py  question_web_factory.py  storage_factory.py  user_factory.py
backend/app_test/shared/fixtures/: fixture_crud.py  fixture_question_running_service.py  fixture_question_storage.py
backend/app_test/shared/mock_data/: __init__.py  question_submission.py  questions.py  users.py
backend/app_test/unit/: conftest.py  shared.py
backend/app_test/unit/data/: test_institution.py  test_question_db.py  test_question_types.py  test_role.py  test_user.py
backend/app_test/unit/database/: conftest.py  test_generic_db.py  test_question_attempt.py  test_question_db.py  test_user_db.py
backend/app_test/unit/service/: conftest.py  test_developer.py  test_runtime_preparer.py  test_storage.py  test_user_mng.py
backend/app_test/utils/: test_database_utils.py  test_file_utils.py
backend/app_test/web/: conftest.py  test_api_startup.py
backend/app_test/web/auth/: conftest.py  test_developer_api.py  test_user_api.py
backend/app_test/web/questions/: crud.py  test_crud.py  test_files.py
backend/app_test/web/startup/: test_api_startup.py
backend/migrations/: env.py
backend/migrations/versions/: 01a9cae971bd_made_created_time_optional.py  01d7577e4a0f_added_status_enum_to_question.py  0246f7edabc7_ensure_that_the_database_schema_has_.py  0eeffadb4d7f_added_source_column_to_question_runtime.py  1e508513679f_changed_default_value_or_column.py  1e6a44a08b31_added_runtime_model_for_question.py  266a5336d341_initial.py  32dff56df78c_made_user_an_optional_option.py  4d9981184ac8_updated_the_question_attempt_model_to_.py  524be2808ab1_updated_the_userroles_to_explicitly_use_.py  62b93ad066bc_changed_the_enum_default_value_to_upper_.py  67b79c7d15ad_added_description_and_display_name_to_.py  6c6b66a1bad7_made_user_an_optional_option.py  745cf53cb744_removed_the_support_python_and_support_.py  90c29cfb3e0f_changed_the_default_value_of_the_enum.py  9755f17c73a6_added_some_new_columns_and_constraint_.py  a04f5e97da08_made_the_message_content_be_json.py  aa4da4b641e1_updating_database_view.py  bc3da3982d78_added_a_created_by_and_update_time_for_.py  cb98fbbb525a_added_is_correct_field_to_question_.py  d2ad86afaef9_changed_the_name_from_is_adaptive_to_.py  e4f88de198c8_added_unique_constraint_for_runtime_.py  f0f78bd41570_initial_migration.py  f9590abacf77_created_a_table_question_view.py
backend/src/: main.py
backend/src/api/: main.py
backend/src/api/core/: __init__.py  database.py  firebase.py
backend/src/api/database/: database.py  generic.py  generic_db.py  institution.py  question.py  question_attempt.py  question_relationship_db.py  role.py  user.py
backend/src/api/db_models/: hybrid.py  question.py  question_attempt.py  users.py
backend/src/api/models/: __init__.py  hybrid.py  question.py  users.py
backend/src/api/response_models/: models.py  sync_models.py
backend/src/api/service/: file_service.py  question_manager.py  question_resource.py  sync.py  user.py  user_manager.py
backend/src/api/web/: refactor_db_questions.py  run_question_server.py  startup.py  user.py
backend/src/app_types/: general.py  run_server.py  sync.py
backend/src/backend/api/: __init__.py  deps.py
backend/src/backend/auth/: __init__.py  exceptions.py  model.py  schemas.py
backend/src/core/: __init__.py  config.py  database_config.py  exceptions.py  firebase.py  logging.py
backend/src/data/: QuestionAnalysis.ipynb  __init__.py  example_questions.json  generic.py  institution.py  question.py  question_attempt.py  question_filter.py  role.py  thread.py  user.py
backend/src/model/: __init__.py  files.py  institution.py  question.py  question_attempt.py  question_ownership.py  thread.py  users.py
backend/src/service/: __init__.py
backend/src/types/: __init__.py  file_data.py  general.py  institution.py  question.py  quiz_data.py  response_models.py  run_server.py  storage.py  sync.py  user.py
backend/src/utils/: __init__.py  conversion_utils.py  database_utils.py  file_utils.py  general_utils.py  image_processing.py  normalization_utils.py  test_utils.py
backend/src/web/: __init__.py  dependencies.py  sync.py
code_sandbox/: Dockerfile  pyproject.toml
code_sandbox/app_test/: conftest.py  test_endpoint.py  test_run_js.py  test_run_py.py
code_sandbox/app_test/assets/: generate.py  mock_entry.js  mock_entry.py  mock_entry_run.js  mock_entry_with_utils.js  mock_entry_with_utils.py  utils.js  utils.py
code_sandbox/app_test/code_runner/: conftest.py  test_run_js.py
code_sandbox/code_sandbox/code_runner/: javascript_runner.py  python_runner.py  runtime_switcher.py
code_sandbox/src/: main.py
code_sandbox/src/core/: logger.py  settings.py
code_sandbox/src/utils/: utils.py
code_sandbox/src/web/: code_running.py
(+720 files in other folders)
