[project]
name = "backend"
version = "0.1.0"
description = "Project focused on generating content for mechanical engineering students"
authors = [
    {name = "Luciano Bermudez",email = "lberm007@ucr.edu"}
]
readme = "README.md"
requires-python =">=3.11,<4.0"

dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "sqlmodel (>=0.0.25,<0.0.26)",
    "pandas (>=2.3.2,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic[email] (>=2.13.1,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "google-cloud-storage (>=3.4.0,<4.0.0)",
    "firebase-admin (>=7.1.0,<8.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pypdf (>=6.1.1,<7.0.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "ipython (>=9.6.0,<10.0.0)",
    "json5 (>=0.12.1,<0.13.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "alembic (>=1.17.1,<2.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "poetry-plugin-shell (>=1.0.1,<2.0.0)",
    "langgraph-sdk (>=0.3.14,<0.4.0)",
    "langchain (>=1.3.0,<2.0.0)",
    "ruff (>=0.15.13,<0.16.0)",
]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"migrations/env.py" = ["F401"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "C4",  # comprehensions
    "TID", # tidy imports
    "RUF", # Ruff-specific
    "ASYNC", # async issues
    "ANN", # type annotations
    "RET", # return issues
    "ARG", # unused arguments
    "PTH", # pathlib recommendations
]

ignore = [
    "ANN101", # missing self annotation
    "ANN102", # missing cls annotation
    "ANN401" # Dynamically typed expressions (typing.Any)
]
[tool.ruff.lint.pycodestyle]
max-line-length = 88


[dependency-groups]
dev = [
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "pytest-split (>=0.10.0,<0.11.0)"
]
