[project]
name = "src"
packages = [
    { include = "code_sandbox", from = "src" }
]
version = "0.1.0"
description = ""
authors = [
    {name = "Luciano Bermudez",email = ";lberm007@ucr.edu"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "json5 (>=0.12.1,<0.13.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
